--- a/2019/package.json
+++ b/2019/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/node": "^12.12.14",
+    "bigint-crypto-utils": "^3.0.21",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.2"
   }
