--- a/2023/package.json
+++ b/2023/package.json
@@ -7,6 +7,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "lcm": "^0.0.3"
   }
 }
